--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-e2c41b8e-eca5-471f-8ead-c7b8d47da7d1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
